# ai-slicer-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  mcp.json  pyproject.toml  test_mcp_server.py
AI-Slicer-mcp-server/: .mcp.json
AI-Slicer-mcp-server/src/: config.py  tools.py
src/: main.py  tools.py
